--- a/package.json
+++ b/package.json
@@ -10,12 +10,11 @@
   "scripts": {
     "build": "babel -d ./dist ./src",
     "prepublish": "npm run build",
-    "test": "mocha -w --compilers js:babel/register"
+    "test": "./node_modules/.bin/karma start"
   },
   "dependencies": {
     "babel": "^5.2.12",
     "babel-core": "^4.6.6",
-    "babel-eslint": "^2.0.2",
     "chai": "^2.3.0",
     "eslint": "^0.17.1",
     "lodash": "^3.7.0",
@@ -23,5 +22,18 @@
   },
   "peerDependencies": {
     "react": "^0.13.1"
+  },
+  "devDependencies": {
+    "babel-loader": "^5.1.3",
+    "expect": "^1.6.0",
+    "karma": "^0.12.32",
+    "karma-babel-preprocessor": "^5.2.0",
+    "karma-chrome-launcher": "^0.1.12",
+    "karma-cli": "0.0.4",
+    "karma-mocha": "^0.1.10",
+    "karma-sourcemap-loader": "^0.3.4",
+    "karma-webpack": "^1.5.1",
+    "node-libs-browser": "^0.5.2",
+    "webpack": "^1.9.8"
   }
 }
