--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "babel": "^5.2.12",
     "babel-core": "^4.6.6",
     "chai": "^2.3.0",
-    "eslint": "^0.17.1",
+    "core-js": "^0.9.12",
     "lodash": "^3.7.0",
     "mocha": "^2.2.4"
   },
