--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-core": "^4.6.6",
     "chai": "^2.3.0",
     "core-js": "^0.9.12",
+    "cssbeautify": "^0.3.1",
     "lodash": "^3.7.0",
     "mocha": "^2.2.4"
   },
