--- a/demos/package.json
+++ b/demos/package.json
@@ -6,6 +6,9 @@
     "type": "git",
     "url": "https://github.com/joshblack/react-stopgap"
   },
+  "scripts": {
+    "start": "iojs server.js"
+  },
   "devDependencies": {
     "babel-loader": "^5.0.0",
     "react-hot-loader": "^1.2.3",
@@ -15,6 +18,6 @@
   "dependencies": {
     "core-js": "^0.9.8",
     "react": "^0.13.1",
-    "react-router": "^0.13.1",
+    "react-router": "^0.13.1"
   }
 }
